--- a/aws-ecs-course-users-microservice/src/main/resources/application-prod.properties
+++ b/aws-ecs-course-users-microservice/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:mysql://${HOST_NAME:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:root}
-#spring.datasource.username=${DATABASE_USER_NAME:root}
-#spring.datasource.password=${DATABASE_USER_PASSWORD:QAZwsx!234}
+spring.datasource.url=jdbc:mysql://${HOST_NAME:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:root}
+spring.datasource.username=${DATABASE_USER_NAME:root}
+spring.datasource.password=${DATABASE_USER_PASSWORD:QAZwsx!234}
 
-spring.datasource.url=jdbc:mysql://${HOST_NAME:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:usersTable}
-spring.datasource.username=user
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://${HOST_NAME:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:usersTable}
+#spring.datasource.username=user
+#spring.datasource.password=password
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
